--- a/index.html
+++ b/index.html
@@ -11,22 +11,92 @@
 <body>
   <div id="site-header"></div>
 
-  <main class="container">
-    <section class="hero">
-      <h1>We build practical, ethical technology</h1>
-      <p>Tools that help organisations serve people better—simply, safely, and at scale.</p>
-      <a class="cta" href="/contact.html">Contact us</a>
-    </section>
+<!-- HERO (light) -->
+<section class="section hero section--plain">
+  <div class="container">
+    <div class="rule"></div>
+    <h1 class="h-gradient">Smarter Decisions. Human First.</h1>
+    <p>At Xperfecta, we build intelligent systems that amplify human decision-making — not replace it.</p>
+    <p>From mental health to logistics and beyond, our AI-powered platforms are designed to support people facing complex choices. We blend technology, data, and domain expertise to guide better outcomes — with clarity, integrity, and trust at the core.</p>
+  </div>
+</section>
 
-    <section class="grid" style="grid-template-columns:repeat(3,1fr)">
-      <div class="card"><h3>What we do</h3><p>Strategy, design, and delivery for real-world impact.</p></div>
-      <div class="card"><h3>How we work</h3><p>Lightweight processes, measurable outcomes, ethical defaults.</p></div>
-      <div class="card"><h3>Where we’re going</h3><p>Long-term partnerships and open, extensible platforms.</p></div>
-    </section>
-  </main>
+<!-- ETHOS STRIP (tinted to break the white) -->
+<section class="section section--tint">
+  <div class="container">
+    <p style="font-size:20px; margin:0; text-align:center;">
+      Decision support, not decision replacement. Technology that listens before it speaks.
+    </p>
+  </div>
+</section>
+
+<!-- DIVISIONS (first place with interactive elements) -->
+<section class="section section--plain">
+  <div class="container">
+    <h2>Our Divisions</h2>
+    <div class="grid grid-3">
+      <article class="card">
+        <span class="chip">In market</span>
+        <h3>Galea</h3>
+        <p>Galea helps individuals, clinicians, and organisations make informed mental health decisions. Built on two decades of clinical research and refined with AI, Galea delivers dynamic self-assessments, clinician tools, and population-level dashboards — improving care across the entire mental health pathway.</p>
+        <!-- First CTAs appear here -->
+        <a class="btn" href="https://galea.care">Learn more</a>
+      </article>
+
+      <article class="card">
+        <span class="chip">Coming soon</span>
+        <h3>Optimisation</h3>
+        <p>A decision-support division for operations and systems. We apply intelligent analysis and tailored algorithms to help teams optimise performance in sectors like logistics, utilities, and service delivery.</p>
+        <a class="btn" href="/contact.html">Contact us</a>
+      </article>
+
+      <article class="card">
+        <span class="chip">In development</span>
+        <h3>Matching</h3>
+        <p>Our matching engine will help people find better fits — from properties to partnerships. This division explores ethical, data-driven matching at scale, with initial focus on real estate and consumer applications.</p>
+        <a class="btn" href="/contact.html">Contact us</a>
+      </article>
+    </div>
+  </div>
+</section>
+
+<!-- PLATFORM (tinted band to break again) -->
+<section class="section section--tint">
+  <div class="container">
+    <h2>Our Platform</h2>
+    <p>All Xperfecta products are built on a modular, cross-domain platform</p>
+    <div class="grid grid-3">
+      <div class="card"><h4>AI</h4><p>Bullet/short blurb.</p></div>
+      <div class="card"><h4>Human First</h4><p>We don’t automate people out of the process — we bring them into better focus.</p></div>
+      <div class="card"><h4>Configurable workflows</h4><p>Bullet/short blurb.</p></div>
+    </div>
+  </div>
+</section>
+
+<!-- PHILOSOPHY (plain, with accent rule) -->
+<section class="section section--plain">
+  <div class="container">
+    <div class="rule" style="margin-left:0;"></div>
+    <h2>Our Philosophy</h2>
+    <div class="grid grid-3">
+      <div class="card"><h4>People come first</h4><p>Our tech empowers them, not replaces them.</p></div>
+      <div class="card"><h4>Clarity</h4><p>Transparency builds trust, we explain the “why,” not just the “what".</p></div>
+      <div class="card"><h4>Choice</h4><p>Every decision matters, especially the human ones.</p></div>
+    </div>
+  </div>
+</section>
+
+<!-- WHO WE ARE (soft band) -->
+<section class="section section--band">
+  <div class="container" style="max-width:900px;">
+    <h2>Who we are</h2>
+    <p>XPerfecta is led by a multidisciplinary team across healthcare, AI, design, and systems thinking.We operate with lean agility, ethical rigor, and a vision for long-term impact.</p>
+    <a class="btn" href="/team.html">Meet the team</a>
+    <a class="btn" href="/about.html">Our story</a>
+  </div>
+</section>
 
   <div id="site-footer"></div>
-
   <!-- If project site, add data-base="/xperfecta-site" -->
   <script src="/assets/js/includes.js"></script>
 </body>
