Update: Fixed Footer Social media icons, added favicon

--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Xperfecta — Contact</title>
   <link rel="stylesheet" href="/assets/css/main.css" />
-  <link rel="icon" href="/favicon.ico" />
+  <link rel="icon" href="/favicon.svg" />
   <meta name="description" content="Contact Xperfecta." />
 </head>
 <body>
