--- a/policies.html
+++ b/policies.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Xperfecta — Policies</title>
   <link rel="stylesheet" href="/assets/css/main.css" />
-  <link rel="icon" href="/favicon.ico" />
+  <link rel="icon" href="/favicon.svg" />
   <meta name="description" content="Policies and legal documents for Xperfecta." />
 </head>
 <body>
