Improved background, added Galea logo.

--- a/index.html
+++ b/index.html
@@ -24,9 +24,7 @@
 <!-- ETHOS STRIP (tinted to break the white) -->
 <section class="section section--tint">
   <div class="container">
-    <p style="font-size:20px; margin:0; text-align:center;">
-      Decision support, not decision replacement. Technology that listens before it speaks.
-    </p>
+    <h2 class="h-gradient" style="margin:0; text-align:center;">Decision support, not decision replacement.<br>Technology that listens before it speaks.</h2>
   </div>
 </section>
 
@@ -37,10 +35,17 @@
     <div class="grid grid-3">
       <article class="card">
         <span class="chip">In market</span>
-        <h3>Galea</h3>
+          <img
+            src="/assets/img/galea-B-logo-name-slogan.svg"
+            alt="Galea logo"
+            height="100"
+            loading="lazy"
+            decoding="async"
+            align-self="flex-start"
+          />
         <p>Galea helps individuals, clinicians, and organisations make informed mental health decisions. Built on two decades of clinical research and refined with AI, Galea delivers dynamic self-assessments, clinician tools, and population-level dashboards — improving care across the entire mental health pathway.</p>
         <!-- First CTAs appear here -->
-        <a class="btn" href="https://galea.care">Learn more</a>
+        <a class="btn-galea" href="https://galea.care">Learn more</a>
       </article>
 
       <article class="card">
@@ -66,10 +71,11 @@
     <h2>Our Platform</h2>
     <p>All Xperfecta products are built on a modular, cross-domain platform</p>
     <div class="grid grid-3">
-      <div class="card"><h4>AI</h4><p>Bullet/short blurb.</p></div>
-      <div class="card"><h4>Human First</h4><p>We don’t automate people out of the process — we bring them into better focus.</p></div>
-      <div class="card"><h4>Configurable workflows</h4><p>Bullet/short blurb.</p></div>
+      <div class="card"><h4>A proprietary AI + rules engine</h4></div>
+      <div class="card"><h4>Smart interfaces for human-in-the-loop decisions</h4></div>
+      <div class="card"><h4>Configurable workflows for real-world complexity</h4></div>
     </div>
+    <h4>We don’t automate people out of the process — we bring them into better focus.</h4>
   </div>
 </section>
 
@@ -87,10 +93,10 @@
 </section>
 
 <!-- WHO WE ARE (soft band) -->
-<section class="section section--band">
+<section class="section section--tint">
   <div class="container" style="max-width:900px;">
     <h2>Who we are</h2>
-    <p>XPerfecta is led by a multidisciplinary team across healthcare, AI, design, and systems thinking.We operate with lean agility, ethical rigor, and a vision for long-term impact.</p>
+    <p>XPerfecta is led by a multidisciplinary team across healthcare, AI, design, and systems thinking. We operate with lean agility, ethical rigor, and a vision for long-term impact.</p>
     <a class="btn" href="/team.html">Meet the team</a>
     <a class="btn" href="/about.html">Our story</a>
   </div>
