Move Matomo analytics from header to dedicated js. Add integration across multiple pages.

--- a/contact.html
+++ b/contact.html
@@ -95,6 +95,7 @@
   <div id="site-footer"></div>
 
   <script src="/assets/js/includes.js"></script>
+  <script src="/assets/js/matomo-init.js" defer></script>
   <script>
     // Fake-submit handler (no backend yet)
     document.getElementById('contactForm').addEventListener('submit', function(e){
