--- a/index.html
+++ b/index.html
@@ -105,5 +105,6 @@
   <div id="site-footer"></div>
   <!-- If project site, add data-base="/xperfecta-site" -->
   <script src="/assets/js/includes.js"></script>
+  <script src="/assets/js/matomo-init.js" defer></script>
 </body>
 </html>
