--- a/404.html
+++ b/404.html
@@ -14,5 +14,6 @@
   </main>
   <div id="site-footer"></div>
   <script src="/assets/js/includes.js"></script>
+  <script src="/assets/js/matomo-init.js" defer></script>
 </body>
 </html>
