--- a/about.html
+++ b/about.html
@@ -112,5 +112,6 @@
 
   <div id="site-footer"></div>
   <script src="/assets/js/includes.js"></script>
+  <script src="/assets/js/matomo-init.js" defer></script>
 </body>
 </html>
