--- a/policies.html
+++ b/policies.html
@@ -62,5 +62,6 @@
   <div id="site-footer"></div>
   <!-- If this repo is a project site, remember data-base="/repo-name" -->
   <script src="/assets/js/includes.js"></script>
+  <script src="/assets/js/matomo-init.js" defer></script>
 </body>
 </html>
