Added a cookie banner to toggle Matomo Cookies

--- a/contact.html
+++ b/contact.html
@@ -96,6 +96,7 @@
 
   <script src="/assets/js/includes.js"></script>
   <script src="/assets/js/matomo-init.js" defer></script>
+  <script src="/assets/js/cookie-banner.js" defer></script>
   <script>
     // Fake-submit handler (no backend yet)
     document.getElementById('contactForm').addEventListener('submit', function(e){
