--- a/policies.html
+++ b/policies.html
@@ -63,5 +63,6 @@
   <!-- If this repo is a project site, remember data-base="/repo-name" -->
   <script src="/assets/js/includes.js"></script>
   <script src="/assets/js/matomo-init.js" defer></script>
+  <script src="/assets/js/cookie-banner.js" defer></script>
 </body>
 </html>
