--- a/404.html
+++ b/404.html
@@ -15,5 +15,6 @@
   <div id="site-footer"></div>
   <script src="/assets/js/includes.js"></script>
   <script src="/assets/js/matomo-init.js" defer></script>
+  <script src="/assets/js/cookie-banner.js" defer></script>
 </body>
 </html>
