--- a/team.html
+++ b/team.html
@@ -84,5 +84,6 @@
   <div id="site-footer"></div>
   <script src="/assets/js/includes.js"></script>
   <script src="/assets/js/matomo-init.js" defer></script>
+  <script src="/assets/js/cookie-banner.js" defer></script>
 </body>
 </html>
