Refactor resource descriptions for clarity and conciseness

--- a/resources.html
+++ b/resources.html
@@ -182,7 +182,7 @@ const resources = [
   },
   {
     title: "Moderating the Influence of Current Intention to Improve Suicide Risk Prediction",
-    description: "This paper introduces a method for classifying whether a person’s stated absence of suicide intention is trustworthy, using GRiST assessment data and probabilistic modelling. The findings demonstrate that unreliability can be predicted with high accuracy, improving the quality of suicide risk evaluation and supporting safer clinical decisions.",
+    description: "A method for classifying whether a person’s stated absence of suicide intention is trustworthy, using GRiST assessment data and probabilistic modelling. The findings demonstrate that unreliability can be predicted with high accuracy, improving the quality of suicide risk evaluation and supporting safer clinical decisions.",
     author: "N. Zaher, Dr Christopher D. Buckingham",
     date: "2016",
     link: "/assets/resources/moderating-the-influence-of-current-intention-to-improve-suicide-risk-prediction.pdf",
@@ -190,7 +190,7 @@ const resources = [
   },
   {
     title: "Integrating service user and practitioner expertise within a web-based system for collaborative mental-health risk and safety management",
-    description: "This paper describes the development of myGRaCE, a web-based tool that brings together practitioner expertise and the lived experience of service users to support collaborative mental-health risk assessment and self-management. Through extensive co-design with service users, the system provides a more intuitive, empowering way for people to understand risks and actively participate in their own care.",
+    description: "The development of myGRaCE, a web-based tool that brings together practitioner expertise and the lived experience of service users to support collaborative mental-health risk assessment and self-management. Through extensive co-design with service users, the system provides a more intuitive, empowering way for people to understand risks and actively participate in their own care.",
     author: "Dr Christopher D. Buckingham, Ann Adams, Laura Vail, Ashish Kumar, Abu Ahmed, Annie Whelan, Eleni Karasouli",
     date: "2015",
     link: "/assets/resources/integrating-service-user-and-practitioner-expertise-within-a-web-based-system-for-collaborative-mental-health-risk-and-safety-management.pdf",
@@ -198,7 +198,7 @@ const resources = [
   },
   {
     title: "Designing multiple user perspectives and functionality for clinical decision support systems",
-    description: "This paper explains how the GRiST system was engineered to present mental-health risk expertise in formats tailored to different users, from clinicians to service users, by building a flexible, psychologically grounded knowledge structure. The approach shows how a single expert model can power multiple interfaces and assessment styles without losing clarity or accuracy.",
+    description: "How the GRiST system was engineered to present mental-health risk expertise in formats tailored to different users, from clinicians to service users, by building a flexible, psychologically grounded knowledge structure. The approach shows how a single expert model can power multiple interfaces and assessment styles without losing clarity or accuracy.",
     author: "Dr Christopher D. Buckingham, A. Ahmed, Ann Adams",
     date: "2013",
     link: "/assets/resources/designing-multiple-user-perspectives-and-functionality-for-clinical-decision-support-systems.pdf",
@@ -206,7 +206,7 @@ const resources = [
   },
   {
     title: "Cues and knowledge structures used by mental-health professionals when making risk assessments",
-    description: "This paper identifies the cues mental-health professionals rely on when judging risks such as suicide, self-harm, self-neglect, and harm to others, revealing clear patterns in how clinicians think about and structure risk information. The findings provide a foundation for building decision-support tools that reflect real clinical expertise rather than isolated risk factors.",
+    description: "Identifies the cues mental-health professionals rely on when judging risks such as suicide, self-harm, self-neglect, and harm to others, revealing clear patterns in how clinicians think about and structure risk information. The findings provide a foundation for building decision-support tools that reflect real clinical expertise rather than isolated risk factors.",
     author: "Dr Christopher D. Buckingham, Ann Adams,  Chris Mace",
     date: "2008",
     link: "/assets/resources/cues-and-knowledge-structures-used-by-mental-health-professionals-when-making-risk-assessments.pdf",
@@ -214,7 +214,7 @@ const resources = [
   },
   {
     title: "Psychological cue use and implications for a clinical decision support system",
-    description: "This paper introduces the galatean model, a psychological explanation of how clinicians use cues, and sometimes misjudge probabilities, when assessing risks like suicide. The model provides a transparent way to represent and improve clinical reasoning, making it a strong foundation for decision-support systems that blend expert judgement with data-driven analysis.",
+    description: "The galatean model, a psychological explanation of how clinicians use cues, and sometimes misjudge probabilities, when assessing risks like suicide. The model provides a transparent way to represent and improve clinical reasoning, making it a strong foundation for decision-support systems that blend expert judgement with data-driven analysis.",
     author: "Dr Christopher D. Buckingham",
     date: "2002",
     link: "/assets/resources/psychological-cue-use-and-implications-for-a-clinical-decision-support-system.pdf",
