Enhance resource sorting logic to sort by year

--- a/resources.html
+++ b/resources.html
@@ -244,11 +244,16 @@ const resources = [
           return haystack.includes(q);
         })
         .sort((a, b) => {
-          // Pinned first, then alphabetical by title
-          const ap = a.pinned === true ? 1 : 0;
-          const bp = b.pinned === true ? 1 : 0;
-          if (ap !== bp) return bp - ap;
-          return (a.title || "").localeCompare(b.title || "");
+        const yearA = parseInt(a.date) || 0;
+        const yearB = parseInt(b.date) || 0;
+
+        // 1. Pinned first
+        if (a.pinned !== b.pinned) {
+            return b.pinned - a.pinned; // pinned=true goes first
+        }
+
+        // 2. Sort by year (descending)
+        return yearB - yearA;
         });
 
       container.innerHTML = "";
