Correct capitalization of "Xperfecta" in team and about sections for consistency

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 <section class="section section--tint">
   <div class="container" style="max-width:900px;">
     <h2>Who we are</h2>
-    <p>XPerfecta is led by a multidisciplinary team across healthcare, AI, design, and systems thinking. We operate with lean agility, ethical rigor, and a vision for long-term impact.</p>
+    <p>Xperfecta is led by a multidisciplinary team across healthcare, AI, design, and systems thinking. We operate with lean agility, ethical rigor, and a vision for long-term impact.</p>
     <a class="btn" href="/team.html">Meet the team</a>
     <a class="btn" href="/about.html">Our story</a>
   </div>
