--- a/team.html
+++ b/team.html
@@ -46,8 +46,8 @@
             <h2 class="team-name">Mark MacLeod</h2>
             <div class="team-title">Chief Executive Office & Acting Chief Revenue Officer</div>
             <div class="team-bio">
-              <p>With over 20 years of international experience across North America, the UK, and Europe, Mark has built a career on making systems work better — from healthcare to sustainability to early-stage ventures. As CEO of XPerfecta, he leads with a hands-on, strategic approach that blends operational rigour with thoughtful innovation, always focused on creating solutions that deliver real-world value.</p>
-              <p>Driven by curiosity, clarity, and a strong sense of purpose, Mark is most at home building from the ground up — helping ideas take shape, teams gain traction, and momentum turn into impact. He values diverse thinking, cross-disciplinary collaboration, and honest dialogue — the kind that unlocks deeper insight and better decisions. At XPerfecta, his role spans vision-setting, problem-solving, and enabling talented people to do their best work.</p>
+              <p>With over 20 years of international experience across North America, the UK, and Europe, Mark has built a career on making systems work better — from healthcare to sustainability to early-stage ventures. As CEO of Xperfecta, he leads with a hands-on, strategic approach that blends operational rigour with thoughtful innovation, always focused on creating solutions that deliver real-world value.</p>
+              <p>Driven by curiosity, clarity, and a strong sense of purpose, Mark is most at home building from the ground up — helping ideas take shape, teams gain traction, and momentum turn into impact. He values diverse thinking, cross-disciplinary collaboration, and honest dialogue — the kind that unlocks deeper insight and better decisions. At Xperfecta, his role spans vision-setting, problem-solving, and enabling talented people to do their best work.</p>
             </div>
           </article>
         </div>
