Update resources introduction text for clarity and relevance

--- a/resources.html
+++ b/resources.html
@@ -137,7 +137,7 @@
         <div class="rule"></div>
         <h1 class="h-gradient">Resources</h1>
         <p class="resources-intro">
-          Download briefings, overviews and supporting documents that sit behind Xperfecta’s platform and approach.
+          Browse the research and supporting documents that explain the thinking, models, and evidence behind Xperfecta’s platform.
         </p>
         <div class="resource-search">
           <label for="searchInput" class="sr-only">Search resources</label>
